[package]
name = "gap_filler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance-rs-async = "1.3.2"
chrono = { version = "0.4.33", features = ["serde"] }
dotenv = "0.15.0"
fern = "0.6.2"
log = "0.4.20"
log4rs = "1.2.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "chrono",
    "bigdecimal",
] }
tokio = { version = "1.36.0", features = ["full"] }
